fix(Footer): fixed grid misalignment

--- a/packages/styles/scss/components/footer/_footer-nav-group.scss
+++ b/packages/styles/scss/components/footer/_footer-nav-group.scss
@@ -13,6 +13,7 @@
   $TEMP--footer-nav-group-type: 'heading-02';
 
   .#{$prefix}--footer-nav-group {
+    padding-left: 0;
     margin-bottom: 0;
     &__title {
       // need to remove once 16 variants come out
@@ -56,6 +57,7 @@
     @include carbon--breakpoint('md') {
       @include carbon--make-col-ready;
 
+      padding-left: 0;
       display: inline-block;
       margin-bottom: carbon--mini-units(6);
 
